web-infras/parser/tests/fixtures/esprima/es2017/async/methods/invalid-async-method/output.txt
[SyntaxError]: Modifier await can not using in there. (1,14)
1|x = { async f: function() {} }
 |            ^
